[tool.poetry]
name = "qif2json"
version = "0.1.1"
description = ""
authors = ["Miyano <dr000w@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
yapf = "^0.28.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
